force-app/chapter00/default/objects/Asset/fields/Accession_Number__c.field-meta.xml
<CustomField>
    <fullName>Accession_Number__c</fullName>
    <description>The Accession Number, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Accession Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>