force-app/chapter00/default/objects/Asset/fields/Accession_Year__c.field-meta.xml
<CustomField>
    <fullName>Accession_Year__c</fullName>
    <description>The Accession Year for an object, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Accession Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>