force-app/chapter00/default/objects/Asset/fields/Asset_Wikidata_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_Wikidata_URL__c</fullName>
    <description>The asset&apos;s Wikidata URL, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Asset Wikidata URL</label>
    <type>Url</type>
</CustomField>