force-app/chapter00/default/objects/Asset/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>The classification of the asset, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>