force-app/chapter00/default/objects/Asset/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <description>The originating culture of the asset, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Culture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>