force-app/chapter00/default/objects/Asset/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The Department the asset is located in, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>