force-app/chapter00/default/objects/Asset/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>A formula field that renders the image courtesy of The Metropolitan&apos;s Open Access API.</description>
    <formula>IF(NOT(ISBLANK(Primary_Image_Small__c)),IMAGE(Primary_Image_Small__c, &apos;Image&apos;, 200, 200),&apos;No image returned.&apos;)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>