force-app/chapter00/default/objects/Asset/fields/Is_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Is_Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Is Highlight field on an Object as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Is Highlight</label>
    <type>Checkbox</type>
</CustomField>