force-app/chapter00/default/objects/Asset/fields/Is_Public_Domain__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The determination as to whether an asset is in the public domain, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Is Public Domain</label>
    <type>Checkbox</type>
</CustomField>