force-app/chapter00/default/objects/Asset/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>The medium of the asset, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>