force-app/chapter00/default/objects/Asset/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <description>The Object ID for an asset, provided by The Metropolitan&apos;s Open Access API.</description>
    <externalId>true</externalId>
    <label>Object ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>