force-app/chapter00/default/objects/Asset/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>The time period of the asset, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>