force-app/chapter00/default/objects/Asset/fields/Primary_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Constituent representing the Artist of the work, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Primary Constituent</label>
    <referenceTo>Constituent__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>