force-app/chapter00/default/objects/Asset/fields/Primary_Image__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image__c</fullName>
    <description>The Primary Image URL as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Primary Image</label>
    <type>Url</type>
</CustomField>