force-app/chapter00/default/objects/Asset/fields/Primary_Image_Small__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image_Small__c</fullName>
    <description>The URL for the small version of the Primary Image, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Primary Image Small</label>
    <type>Url</type>
</CustomField>