force-app/chapter00/default/objects/Asset/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current location of an Asset at an Account location.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Display</fullName>
                <default>true</default>
                <label>On Display</label>
            </value>
            <value>
                <fullName>Off Display</fullName>
            </value>
            <value>
                <fullName>On Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>