force-app/chapter00/default/objects/Asset/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The Title of the asset, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>